--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -22,6 +22,15 @@ body
 iframe
   border: none
 
+.btn[disabled], .btn.disabled
+  &:before
+    display: block
+    content: ''
+    background: url('ajax-loader.gif') no-repeat
+    background-position: center
+    height: 20px
+    width: 20px
+
 .fluid-width-video-wrapper
   iframe
     min-height: 200px
