--- a/app/views/courses/_title_bar.html.haml
+++ b/app/views/courses/_title_bar.html.haml
@@ -1,8 +1,9 @@
 .container
   .row
-    .span8
+    .span6
       %h2 Intro to Sous Vide
-    .span4
-      = form_tag url_for(controller: :mailing_list, action: :subscribe), remote: true do
-        = email_field_tag('email', '', {placeholder: 'enter your email for updates'})
+    = form_tag url_for(controller: :mailing_list, action: :subscribe), remote: true do
+      .input-append.span6
+        = email_field_tag('email', nil, {class: 'span4', placeholder: 'enter your email for updates'})
+        = button_tag('Submit', {class: 'btn', disable_with: ''})
 
