add error view for subscribe

--- a/app/views/mailing_list/error.js.erb
+++ b/app/views/mailing_list/error.js.erb
@@ -1,5 +1,4 @@
 var $email_input = $('input#email');
 $email_input.val('');
-$email_input.attr('placeholder', "<%= success_placeholder_text %>");
+$email_input.attr('placeholder', "<%= error_placeholder_text %>");
 $email_input.blur();
-
