Do not show alerts while we're caching aggro

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -122,12 +122,13 @@
     -# ==========================================================================
 
     #main-container
-      - if flash[:notice]
-        %p.notice= notice
-      - if flash[:alert]
-        %p.alert= alert
-      - if flash[:error]
-        %p.alert= flash[:error]
+      -# No flashes while we're caching aggressively
+      -# - if flash[:notice]
+      -#   %p.notice= notice
+      -# - if flash[:alert]
+      -#   %p.alert= alert
+      -# - if flash[:error]
+      -#   %p.alert= flash[:error]
       = render 'layouts/header'
       = yield
 
