add margin-top to subscribe input

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -43,6 +43,7 @@ iframe
 
 @import application/nav_bar
 @import application/carousel
+@import application/subscribe
 
 @import twitter/bootstrap/responsive
 @import application/media_queries
