--- a/app/views/mailing_list/success.js.erb
+++ b/app/views/mailing_list/success.js.erb
@@ -1,5 +1,5 @@
 var $email_input = $('input#email');
 $email_input.val('');
-$email_input.attr('placeholder', "<%= success_placeholder_text %>");
+$email_input.attr('placeholder', "<%= @placeholder %>");
 $email_input.blur();
 
