put subscribe on home page

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,7 @@
+.container
+  .row
+    .span12
+      = render 'mailing_list/subscribe'
 .slider-block
   #myCarousel.carousel.slide
     .carousel-inner
