--- a/app/views/mailing_list/_subscribe.html.haml
+++ b/app/views/mailing_list/_subscribe.html.haml
@@ -1,5 +1,6 @@
 .subscribe
-  = form_tag url_for(controller: :mailing_list, action: :subscribe), remote: true do
+  = form_tag mailing_list_subscribe_path, remote: true do
     .input-append
       = email_field_tag('email', nil, {class: 'span4', placeholder: 'enter your email for updates', required: true})
       = button_tag('Submit', {class: 'btn', disable_with: '', data: { behavior: 'loadable'}})
+
