Update bios on homepage

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -22,28 +22,58 @@
   .row
     .span8
       %h2 Learn the modernist technique
-      %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pulvinar lobortis dolor, sit amet mollis sem sagittis in. Etiam nec mauris enim. Praesent suscipit, felis eu facilisis lobortis, eros odio adipiscing felis, et congue justo est ut libero. Praesent dictum, nulla eu ultricies ornare, arcu justo pulvinar nisl, id adipiscing velit nisl nec nunc. Duis mollis, risus vitae suscipit tristique, augue odio pellentesque tortor, in consectetur eros ligula et nulla. In id odio quam. Nulla nisl libero, lacinia ac faucibus in, feugiat eu est. Donec nec mi neque, et lacinia nisi. In hac habitasse platea dictumst.
+      %p
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pulvinar
+        lobortis dolor, sit amet mollis sem sagittis in. Etiam nec mauris enim.
+        Praesent suscipit, felis eu facilisis lobortis, eros odio adipiscing
+        felis, et congue justo est ut libero. Praesent dictum, nulla eu
+        ultricies ornare, arcu justo pulvinar nisl, id adipiscing velit nisl nec
+        nunc. Duis mollis, risus vitae suscipit tristique, augue odio
+        pellentesque tortor, in consectetur eros ligula et nulla. In id odio
+        quam. Nulla nisl libero, lacinia ac faucibus in, feugiat eu est. Donec
+        nec mi neque, et lacinia nisi. In hac habitasse platea dictumst.
     .span4
       %h3 From creators of Modernist Cuisine
       %ul.unstyled.creators
         %li.creator.row
           .span1
-            %img{ src: 'http://lorempixel.com/100/100/people' }
+            %img{ src: 'http://lorempixel.com/100/100/people/2/' }
           .span3
-            %p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            %b Chris Young &rsaquo; managing directory
+            %p
+              :erb
+                Chris is the principal coauthor of the acclaimed six-volume work
+                <em>Modernist Cuisine: The Art and Science of Cooking</em>, which was named
+                both the 2012 Cookbook of the Year and Best Professional Cookbook
+                of the year by the James Beard Foundation and has been a worldwide
+                best seller. Chris was also the founding chef of Heston
+                Blumenthal’s Fat Duck Experimental Kitchen, the secret culinary
+                laboratory behind the innovative dishes served at one of the best
+                restaurants in the world. Prior to becoming a chef, he completed
+                degrees in theoretical mathematics and biochemistry.
+
         %li.creator.row
           .span1
-            %img{ src: 'http://lorempixel.com/100/100/people/1' }
+            %img{ src: 'http://lorempixel.com/100/100/people/30/' }
           .span3
-            %p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            %b Grant Crilly &rsaquo; directory of culinary ops
+            %p
+              Grant was the first development chef hired by the Modernist
+              Cuisine team. Prior to this he was chef de cuisine at Busaba in
+              Mumbai and Mistral in Seattle, and served as head development chef
+              at Delicious Planet. He has cooked for Pascal Barbot at
+              L’Astrance, worked with Pierré Herme’s team at Grégoire-Ferrandi,
+              and practiced butchery at Bajon Jean Pierrie in Paris.
+
         %li.creator.row
           .span1
-            %img{ src: 'http://lorempixel.com/100/100/people/2' }
+            %img{ src: 'http://lorempixel.com/100/100/people/5/' }
           .span3
-            %p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        %li.creator.row
-          .span1
-            %img{ src: 'http://lorempixel.com/100/100/people/3' }
-          .span3
-            %p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            %b Ryan Matthew Smith &rsaquo; creative director
+            %p
+              :erb
+                Ryan was the principal photographer and photo editor for <em>Modernist
+                Cuisine: The Art and Science of Cooking</em>. Smith’s work has been
+                featured by PPN, Photographer, Life, Time, The New York Times,
+                Feature Shoot, Quo, and Abduzeedo.
 
