--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -124,7 +124,7 @@
     #main-container
       = render 'layouts/header'
       = yield
-
+      = render 'layouts/footer'
     -# JS
     -# ==========================================================================
 
