--- a/app/assets/stylesheets/application/_carousel.css.sass
+++ b/app/assets/stylesheets/application/_carousel.css.sass
@@ -6,6 +6,7 @@
 
 .carousel
   margin-bottom: 0
+
 .carousel .item
   width: 100%
   max-height: 600px
@@ -14,7 +15,7 @@
   width: 100%
 
 .carousel .carousel-control
-  background: none
+  background: rgba(0, 0, 0, 0.6)
   border: none
   top: 50%
 
