--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -11,12 +11,7 @@
 
 = render 'spec_sheet', activity: activity
 
-.container
-  - activity.steps.each_with_index do |step, i|
-    - if step.youtube_id?
-      = render 'video_step', step: step, count: i+1
-    - else
-      = render 'step', step: step, count: i+1
+= render 'step_by_step', activity: activity
 
 = render 'layouts/disqus_comments', id: activity.id
 
