--- a/app/assets/stylesheets/application/_nav_bar.css.sass
+++ b/app/assets/stylesheets/application/_nav_bar.css.sass
@@ -1,10 +1,11 @@
 .sticky-navbar
   width: 100%
   position: relative
-  background: rgba(255, 255, 255, 0.7)
+  background: white
   z-index: 9999
   margin-bottom: 5px
   &.stuck-to-top
+    +box-shadow(0px 0px 6px 0px black)
     position: fixed
     top: 0
   .btn
