--- a/app/views/courses/_navigation.html.haml
+++ b/app/views/courses/_navigation.html.haml
@@ -3,39 +3,19 @@
   .container
     .row
       .span1
-        - if model.prev.nil?
-          %a.disabled.btn <
-        - else
-          = link_to "<", model.prev, { class: 'btn' }
+        =link_to "<", model.prev, { class: "btn #{'disabled' if model.prev.nil?}" }
       .span4
         %h4= model.title
-        -# #overview
-        -#   .accordion-group
-        -#     .accordion-heading
-        -#       %a.accordion-toggle{ data: { toggle: 'collapse', parent: '#overview' }, :href => '#collapse-one'}
-        -#         Module 1
-        -#         %i.icon-caret-down
-        -#     #collapse-one.accordion-body.collapse.in
-        -#       .accordion-inner
-        -#         = link_to "Course", course_path(1)
-        -#   .accordion-group
-        -#     .accordion-heading
-        -#       %a.accordion-toggle{ data: { toggle: 'collapse', parent: '#overview' }, :href => '#collapse-two'}
-        -#         Module 2
-        -#         %i.icon-caret-down
-        -#     #collapse-two.accordion-body.collapse
-        -#       .accordion-inner
-        -#         Other Stuff and stuff
       .span1
-        - if model.next.nil?
-          %a.disabled.btn >
-        - else
-          = link_to ">", model.next, { class: 'btn' }
+        =link_to ">", model.next, { class: "btn #{'disabled' if model.next.nil?}" }
 
       .span2
-        %h5 Spec Sheet
+        %h5
+          %a{href: '#spec-sheet'} Spec Sheet
       .span2
-        %h5 Step-By-Step
+        %h5
+          %a{href: '#step-by-step'} Step-By-Step
       .span2
-        %h5 Comments
+        %h5
+          %a{href: '#disqus_thread'} Comments
 
