--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,13 +1,10 @@
 .container
   .row
     .span12
-      %a.span3{ href: "https://www.facebook.com/Chefsteps" }
-        %i.icon-facebook
+      %a.span3.icon-facebook{ href: "https://www.facebook.com/Chefsteps" }
         Facebook
-      %a.span3{ href: "http://twitter.com/@chefsteps" }
-        %i.icon-twitter
+      %a.span3.icon-twitter{ href: "http://twitter.com/@chefsteps" }
         Twitter
-      %a.span3{ href: "http://pinterest.com/chefsteps/" }
-        %i.icon-pinterest
+      %a.span3.icon-pinterest{ href: "http://pinterest.com/chefsteps/" }
         Pinterest
 
