--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,16 +1,14 @@
+@import bootstrap_config
 @import twitter/bootstrap-no-sprites
 @import font-awesome
-
-body
-  font-size: 16px
 
 .center
   text-align: center
 
 .hero-unit
-  color: white
+  color: $white
   padding: 0
-  background: black
+  background: $black
   +border-radius(0)
 
   .row:first-child
