--- a/app/assets/stylesheets/styleguide.css.sass
+++ b/app/assets/stylesheets/styleguide.css.sass
@@ -16,7 +16,7 @@
 .styleguide-georgia-light
   font-family: "Georgia-Light"
 .styleguide-georgia-regular
-  font-family: "Georgia-Regualr"
+  font-family: "Georgia-Regular"
 .styleguide-georgia-medium
   font-family: "Georgia-Medium"
 .styleguide-georgia-bold
