header logo styled

--- a/app/assets/stylesheets/application/_header.sass
+++ b/app/assets/stylesheets/application/_header.sass
@@ -6,6 +6,15 @@
   padding-bottom: 8px
   max-height: 40px
   width: auto
+  font-size: 26px
+  text-transform: uppercase
+  color: black
+  font-weight: normal
+  letter-spacing: 1px
+  strong
+    font-size: 40px
+    font-weight: normal
+
 
 .navbar .navbar-inner
   background: white
