--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,9 @@
 .navbar
   .navbar-inner
     .container
-      %a.brand{ href: root_path } ChefSteps
+      %a.brand{ href: root_path }
+        :erb
+          <strong>C</strong>hef<strong>S</strong>teps
       .nav.pull-right.addthis-container
         .addthis_toolbox.addthis_default_style.pull-right
           %a.addthis_button_facebook_like
