social font - WIP

--- a/app/assets/stylesheets/styleguide.css.sass
+++ b/app/assets/stylesheets/styleguide.css.sass
@@ -1,5 +1,6 @@
 @import bootstrap_config
 @import font-awesome
+@import application/social_icons
 
 = styleguide-swatch($color)
   border: 1px solid darken($color, 20%)
