--- a/app/views/styleguide/index.html.haml
+++ b/app/views/styleguide/index.html.haml
@@ -88,8 +88,8 @@
   .row
     .span12.styleguide-social-icons
       %h3 Social Icons
-      %i.icon-facebook.icon-circle-brick
-      %i.icon-twitter.icon-circle-brick
-      %i.icon-pinterest.icon-circle-brick
-      %i.icon-google-plus.icon-circle-brick
+      %i.ss-icons.ss-facebook.icon-circle-brick
+      %i.ss-twitter.icon-circle-brick
+      %i.ss-pinterest.icon-circle-brick
+      %i.ss-google.icon-circle-brick
 
