home page style

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -2,6 +2,8 @@
 @import twitter/bootstrap-no-sprites
 @import font-awesome
 
+@import application/fonts
+
 .center
   text-align: center
 
@@ -43,6 +45,7 @@ iframe
 @import application/nav_bar
 @import application/carousel
 @import application/subscribe
+@import application/home
 
 @import twitter/bootstrap/responsive
 @import application/media_queries
