--- a/app/assets/stylesheets/application/_header.sass
+++ b/app/assets/stylesheets/application/_header.sass
@@ -15,6 +15,11 @@
     font-size: 40px
     font-weight: normal
 
+.brand-byline
+  clear: left
+  margin-left: 45px
+  +font-sans-tiny
+  font-style: italic
 
 .navbar .navbar-inner
   background: white
@@ -48,3 +53,4 @@
   padding-top: 10px
   a
     vertical-align: baseline
+
