--- a/app/assets/stylesheets/_bootstrap_config.scss
+++ b/app/assets/stylesheets/_bootstrap_config.scss
@@ -29,7 +29,7 @@ $orange:                #f89406;
 $pink:                  #c3325f;
 $purple:                #7a43b6;
 $brick:                 #aa4311;
-$brick-light:           #b35629;
+$brick-light:           #FFBC99;
 
 
 // Scaffolding
@@ -40,7 +40,7 @@ $textColor:             $grayDark;
 
 // Links
 // -------------------------
-$linkColor:             #08c;
+$linkColor:             $brick;
 $linkColorHover:        darken($linkColor, 15%);
 
 
