--- a/app/assets/stylesheets/application/_header.sass
+++ b/app/assets/stylesheets/application/_header.sass
@@ -6,13 +6,12 @@
   padding-bottom: 8px
   max-height: 40px
   width: auto
-  font-size: 26px
-  text-transform: uppercase
+  font-size: 40px
+  font-variant: small-caps
   color: black
   font-weight: normal
   letter-spacing: 1px
   strong
-    font-size: 40px
     font-weight: normal
 
 .brand-byline
