--- a/app/assets/stylesheets/application/_subscribe.css.sass
+++ b/app/assets/stylesheets/application/_subscribe.css.sass
@@ -1,3 +1,23 @@
 .subscribe
   margin-top: 15px
   float: right
+  input, button
+    background: $white
+    padding: 10px
+    border: none
+  input
+    +font-serif-medium
+    color: $black
+    box-shadow: none
+  button
+    position: relative
+    color: $brick
+    height: 38px
+    &:before
+      position: absolute
+      content: ''
+      display: inline-block
+      height: 27px
+      left: 0
+      top: 6px
+      border-left: 1px solid $grayLighter
