--- a/app/assets/stylesheets/application/_subscribe.css.sass
+++ b/app/assets/stylesheets/application/_subscribe.css.sass
@@ -21,3 +21,14 @@
       left: 0
       top: 6px
       border-left: 1px solid $grayLighter
+  &.orange
+    input
+      border: 1px solid $brick
+      border-right: none
+    button
+      border: 1px solid $brick
+      border-left: none
+      height: 40px
+      &:before
+        border-left: 1px solid $brick
+
