--- a/app/views/courses/_title_bar.html.haml
+++ b/app/views/courses/_title_bar.html.haml
@@ -1,6 +1,5 @@
 .container
   .row
-    .span6
-      %h2 Intro to Sous Vide
-    .span6
-      = render 'mailing_list/subscribe'
+    .span12
+      = render 'mailing_list/subscribe', orange: true
+
