--- a/app/assets/stylesheets/application/_home.css.sass
+++ b/app/assets/stylesheets/application/_home.css.sass
@@ -1,5 +1,4 @@
 .hero-unit.signup-banner
-  background: $brick
   h2, h3
     line-height: 1em
   h2
@@ -15,19 +14,19 @@
     +font-sans-small
 
 .creators
+  margin-bottom: 20px
   h3
     +font-sans-medium
     text-transform: uppercase
     font-weight: bold
     letter-spacing: 1px
-
-.creator
-  h4
-    +font-serif-large
-    color: $brick
-  p
-    margin-top: 5px
-    +font-sans-medium
-    letter-spacing: 1px
-  .border
-    border-bottom: 1px solid $grayLighter
+  .creator
+    h4
+      +font-serif-large
+      color: $brick
+    p
+      margin-top: 5px
+      +font-sans-medium
+      letter-spacing: 1px
+    .border
+      border-bottom: 1px solid $grayLighter
