style course breakdown

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -45,6 +45,7 @@ iframe
 @import application/subscribe
 @import application/home
 @import application/courses/show
+@import application/courses/course_breakdown
 
 @import twitter/bootstrap/responsive
 @import application/media_queries
