--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -13,7 +13,7 @@
     .caption-content
       %h3 Free to Learn
       %h4 Cook better with sous vide
-      = link_to "Preview Course >>", course_path(1), {}
+      = link_to "Preview Course >>", course_path(1)
 
 .hero-unit.signup-banner
   .container
