Add overview style

--- a/app/assets/stylesheets/application/courses/_show.css.sass
+++ b/app/assets/stylesheets/application/courses/_show.css.sass
@@ -21,8 +21,7 @@
     margin-top: 5px
     +font-sans-medium
     letter-spacing: 1px
-  .border
-    border-bottom: 1px solid $grayLighter
+  .horizontal-divider
     margin-top: 20px
 
 .instructor:first-child
