--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -41,7 +41,7 @@
                   restaurants in the world. Prior to becoming a chef, he completed
                   degrees in theoretical mathematics and biochemistry.
           .row
-            .span8.border
+            .span8.horizontal-divider
         %li.instructor
           .row
             .span2
@@ -56,7 +56,7 @@
                 L’Astrance, worked with Pierré Herme’s team at Grégoire-Ferrandi,
                 and practiced butchery at Bajon Jean Pierrie in Paris.
           .row
-            .span8.border
+            .span8.horizontal-divider
         %li.instructor
           .row
             .span2
@@ -70,7 +70,7 @@
                   featured by PPN, Photographer, Life, Time, The New York Times,
                   Feature Shoot, Quo, and Abduzeedo.
           .row
-            .span8.border
+            .span8.horizontal-divider
     .span4
       = render 'course_breakdown', activities: activities
 
