--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -13,7 +13,7 @@
     .caption-content
       %h3 Free to Learn
       %h4 Cook better with sous vide
-      = link_to "Preview Course >>", course_path(1)
+      = link_to "Preview Course »", course_path(1)
 
 .hero-unit.signup-banner
   .container
@@ -59,7 +59,7 @@
                   restaurants in the world. Prior to becoming a chef, he completed
                   degrees in theoretical mathematics and biochemistry.
           .row
-            .span4.border
+            .span4.horizontal-divider
 
         %li.creator
           .row
@@ -75,7 +75,7 @@
                 L’Astrance, worked with Pierré Herme’s team at Grégoire-Ferrandi,
                 and practiced butchery at Bajon Jean Pierrie in Paris.
           .row
-            .span4.border
+            .span4.horizontal-divider
 
         %li.creator
           .row
@@ -90,6 +90,6 @@
                   featured by PPN, Photographer, Life, Time, The New York Times,
                   Feature Shoot, Quo, and Abduzeedo.
           .row
-            .span4.border
+            .span4.horizontal-divider
 
 
