--- a/app/views/mailing_list/_subscribe.html.haml
+++ b/app/views/mailing_list/_subscribe.html.haml
@@ -3,5 +3,5 @@
   = form_tag mailing_list_subscribe_path, remote: true do
     .input-append
       = email_field_tag('email', nil, {class: 'span4', placeholder: 'Enter your email for updates', required: true})
-      = button_tag('>>', {class: 'btn', disable_with: '', data: { behavior: 'loadable'}})
+      = button_tag('»', {class: 'btn', disable_with: '', data: { behavior: 'loadable'}})
 
