--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -30,6 +30,9 @@ ul.horizontal-list
     &:first-child
       margin: 0
 
+.horizontal-divider
+  border-top: 1px solid $grayLighter
+
 .icon-white
   color: $white
 
@@ -59,6 +62,7 @@ iframe
 @import application/home
 @import application/courses/show
 @import application/courses/course_breakdown
+@import application/activities/overview
 
 @import twitter/bootstrap/responsive
 @import application/media_queries
