--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -11,7 +11,7 @@
         .video-container
           %iframe{src: youtube_url(activity.youtube_id)}
 - if activity.spec_sheet?
-  = render 'spec_sheet', activity: activity
+  = render 'overview', activity: activity
 - if activity.step_by_step?
   = render 'step_by_step', activity: activity
 
