update gray colors

--- a/app/assets/stylesheets/_bootstrap_config.scss
+++ b/app/assets/stylesheets/_bootstrap_config.scss
@@ -12,9 +12,9 @@
 $black:                 #000;
 $grayDarker:            #222;
 $grayDark:              #333;
-$gray:                  #555;
-$grayLight:             #999;
-$grayLighter:           #eee;
+$gray:                  #666666;
+$grayLight:             #EAEAEA;
+$grayLighter:           #F8F8F8;
 $white:                 #fff;
 
 
