--- a/app/assets/stylesheets/application/_carousel.css.sass
+++ b/app/assets/stylesheets/application/_carousel.css.sass
@@ -39,7 +39,7 @@
     +font-serif-small
     width: 250px
     padding-bottom: 10px
-    border-bottom: 4px double $grayLighter
+    border-bottom: 4px double $grayLight
   h3, h4
     line-height: 1em
   a
