--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -4,7 +4,7 @@
     color: $brick
   h5
     +font-serif-medium
-    color: $grayLight
+    color: $gray
     text-transform: uppercase
   p
     +font-sans-medium
