--- a/app/assets/stylesheets/application/courses/_course_breakdown.css.sass
+++ b/app/assets/stylesheets/application/courses/_course_breakdown.css.sass
@@ -14,7 +14,7 @@
     margin-left: 20px
   li
     +font-sans-small
-    color: $grayLight
+    color: $gray
     margin-top: 10px
 
 .module:first-child
