--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -24,3 +24,8 @@
       background: $white
       border: 1px solid $grayLight
       +border-radius(0)
+
+.horizontal-divider
+  border-width: 2px
+  margin-bottom: 20px
+
