cooked this button placeholder

--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -29,3 +29,11 @@
   border-width: 2px
   margin-bottom: 20px
 
+.cooked-this
+  +font-sans-medium
+  background: $brick
+  color: $white
+  text-transform: uppercase
+  border: 1px dashed $white
+  margin: 5px
+  padding: 10px
