update ingredient table

--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -38,7 +38,11 @@
       background: $gray
       th
         padding: 10px
+      th:first-child
+        text-align: left
     tbody
+      .quantity
+        text-align: right
       tr
         color: $black
         td
