--- a/app/assets/stylesheets/styleguide.css.sass
+++ b/app/assets/stylesheets/styleguide.css.sass
@@ -29,8 +29,8 @@
   .styleguide-brick
     +styleguide-swatch($brick)
     color: $white
-  .styleguide-brick-light
-    +styleguide-swatch($brick-light)
+  .styleguide-brickLight
+    +styleguide-swatch($brickLight)
     color: $white
   .styleguide-white
     +styleguide-swatch($white)
