--- a/app/views/styleguide/index.html.haml
+++ b/app/views/styleguide/index.html.haml
@@ -60,8 +60,8 @@
       $white
     .span1.styleguide-brick
       $brick
-    .span1.styleguide-brick-light
-      $brick-light
+    .span1.styleguide-brickLight
+      $brickLight
   .row
     .span12
       %h3 Bullet Lists
