--- a/app/assets/stylesheets/_bootstrap_config.scss
+++ b/app/assets/stylesheets/_bootstrap_config.scss
@@ -29,7 +29,7 @@ $orange:                #f89406;
 $pink:                  #c3325f;
 $purple:                #7a43b6;
 $brick:                 #aa4311;
-$brick-light:           #FFBC99;
+$brickLight:           #FFBC99;
 
 
 // Scaffolding
