--- a/app/assets/stylesheets/_bootstrap_config.scss
+++ b/app/assets/stylesheets/_bootstrap_config.scss
@@ -71,7 +71,7 @@ $tableBorder:                       #ddd; // table and cell border
 // Buttons
 // -------------------------
 $btnBackground:                     $brick;
-$btnBackgroundHighlight:            darken($$btnBackgroundHighlight, 10%);
+$btnBackgroundHighlight:            darken($btnBackground, 10%);
 $btnBorder:                         #bbb;
 
 $btnPrimaryBackground:              $linkColor;
