--- a/app/assets/stylesheets/application/_header.sass
+++ b/app/assets/stylesheets/application/_header.sass
@@ -1,29 +1,28 @@
 .navbar
   margin-bottom: 0
 
+.brand-container
+  +clearfix
+
 .navbar .brand
   margin-top: 20px
   padding-bottom: 8px
-  max-height: 40px
-  width: auto
-  font-size: 40px
-  font-variant: small-caps
-  color: black
-  font-weight: normal
-  letter-spacing: 1px
-  strong
-    font-weight: normal
 
 .brand-byline
   clear: left
   margin-left: 45px
+  line-height: 20px
   +font-sans-tiny
   font-style: italic
+  padding-top: 10px
+
+.delve-brand img
+  display: inline-block
+  margin: -10px 0 0 5px
 
 .navbar .navbar-inner
   background: white
   filter: none
-  height: 80px
   +box-shadow(none)
   border: 0
 
