--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,11 +3,11 @@
     .container
       .brand-container
         %a.brand{ href: root_path }
-          :erb
-            <strong>C</strong>hef<strong>S</strong>teps
+          = image_tag('chefsteps-logo.png', alt: 'ChefSteps')
         .brand-byline
           brought to you by
-          %a.delve-brand{href: 'http://delvekitchen.com'} delve
+          %a.delve-brand{href: 'http://delvekitchen.com'}
+            = image_tag('delve-logo.png', alt: 'Delve')
 
       .nav.pull-right.addthis-container
         .addthis_toolbox.addthis_default_style.pull-right
