--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -26,7 +26,7 @@
         %li.instructor
           .row
             .span2
-              %img{ src: 'http://lorempixel.com/100/100/people/2' }
+              = image_tag('chris-large.jpg', title: 'Chris Young')
             .span6
               %h4 Chris Young
               %p
@@ -45,7 +45,7 @@
         %li.instructor
           .row
             .span2
-              %img{ src: 'http://lorempixel.com/100/100/people/1' }
+              = image_tag('grant-large.jpg', title: 'Chris Young')
             .span6
               %h4 Grant Crilly
               %p
@@ -55,20 +55,6 @@
                 at Delicious Planet. He has cooked for Pascal Barbot at
                 L’Astrance, worked with Pierré Herme’s team at Grégoire-Ferrandi,
                 and practiced butchery at Bajon Jean Pierrie in Paris.
-          .row
-            .span8.horizontal-divider
-        %li.instructor
-          .row
-            .span2
-              %img{ src: 'http://lorempixel.com/100/100/people' }
-            .span6
-              %h4 Ryan Matthew Smith
-              %p
-                :erb
-                  Ryan was the principal photographer and photo editor for <em>Modernist
-                  Cuisine: The Art and Science of Cooking</em>. Smith’s work has been
-                  featured by PPN, Photographer, Life, Time, The New York Times,
-                  Feature Shoot, Quo, and Abduzeedo.
           .row
             .span8.horizontal-divider
     .span4
