--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -44,7 +44,7 @@
         %li.creator
           .row
             .span1
-              %img{ src: 'http://lorempixel.com/100/100/people/2/' }
+              = image_tag('chris.jpg', title: 'Chris Young')
             .span3
               %h4 Chris Young
               %p
@@ -64,7 +64,7 @@
         %li.creator
           .row
             .span1
-              %img{ src: 'http://lorempixel.com/100/100/people/30/' }
+              = image_tag('grant.jpg', title: 'Grant Crilly')
             .span3
               %h4 Grant Crilly
               %p
@@ -80,7 +80,7 @@
         %li.creator
           .row
             .span1
-              %img{ src: 'http://lorempixel.com/100/100/people/5/' }
+              = image_tag('ryan.jpg', title: 'Ryan Matthew Smith')
             .span3
               %h4 Ryan Matthew Smith
               %p
