--- a/app/assets/stylesheets/application/_header.sass
+++ b/app/assets/stylesheets/application/_header.sass
@@ -1,11 +1,7 @@
 .navbar
   margin-bottom: 0
 
-.brand-container
-  +clearfix
-
 .navbar .brand
-  margin-top: 20px
   padding-bottom: 8px
 
 .brand-byline
@@ -45,10 +41,11 @@
   background: none
   color: #111
 
-.addthis_toolbox
-  vertical-align: baseline
-  width: 400px
-  padding-top: 10px
-  a
-    vertical-align: baseline
+.navbar .addthis-container
+  margin-top: 40px
 
+.addthis_toolbox
+  a
+    margin-left: 5px
+    &.addthis_button_google_plusone
+      margin-left: -3px
