--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,7 @@
 .navbar
   .navbar-inner
     .container
-      .brand-container
+      .nav.brand-container
         %a.brand{ href: root_path }
           = image_tag('chefsteps-logo.png', alt: 'ChefSteps')
         .brand-byline
@@ -11,9 +11,8 @@
 
       .nav.pull-right.addthis-container
         .addthis_toolbox.addthis_default_style.pull-right
-          %a.addthis_button_facebook_like
-          %a.addthis_button_tweet
           %a.addthis_button_pinterest_pinit
-          %a.addthis_button_google_plusone
-          %a.addthis_pill_style
+          %a.addthis_button_google_plusone{ 'g:plusone:size' => 'standard', 'g:plusone:annotation' => 'none' }
+          %a.addthis_button_facebook_like{ 'fb:like:width' => '75' }
+          %a.addthis_button_tweet
 
