Tweak some stuff

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -54,6 +54,9 @@ iframe
 #disqus_thread
   padding-top: 20px
 
+.img-profile
+  +border-radius(3px)
+
 @import application/header
 @import application/navigation
 @import application/carousel
