--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -26,7 +26,7 @@
         %li.instructor
           .row
             .span2
-              = image_tag('chris-large.jpg', title: 'Chris Young')
+              = image_tag('chris-large.jpg', title: 'Chris Young', class: 'img-profile')
             .span6
               %h4 Chris Young
               %p
@@ -45,7 +45,7 @@
         %li.instructor
           .row
             .span2
-              = image_tag('grant-large.jpg', title: 'Chris Young')
+              = image_tag('grant-large.jpg', title: 'Chris Young', class: 'img-profile')
             .span6
               %h4 Grant Crilly
               %p
