--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -44,7 +44,7 @@
         %li.creator
           .row
             .span1
-              = image_tag('chris.jpg', title: 'Chris Young')
+              = image_tag('chris.jpg', title: 'Chris Young', class: 'img-profile')
             .span3
               %h4 Chris Young
               %p
@@ -64,7 +64,7 @@
         %li.creator
           .row
             .span1
-              = image_tag('grant.jpg', title: 'Grant Crilly')
+              = image_tag('grant.jpg', title: 'Grant Crilly', class: 'img-profile')
             .span3
               %h4 Grant Crilly
               %p
@@ -80,7 +80,7 @@
         %li.creator
           .row
             .span1
-              = image_tag('ryan.jpg', title: 'Ryan Matthew Smith')
+              = image_tag('ryan.jpg', title: 'Ryan Matthew Smith', class: 'img-profile')
             .span3
               %h4 Ryan Matthew Smith
               %p
