add more fields to activities

--- a/app/views/activities/_overview.html.haml
+++ b/app/views/activities/_overview.html.haml
@@ -1,26 +1,15 @@
-- difficulty_level = "easy"
 #overview
   .container
     .row
       .span8
-        %h1=activity.title
-        %p
-          Banh mi adipisicing odd future, squid you probably haven't heard of
-          them ex wolf eu labore blog ad. Pour-over brooklyn fingerstache
-          delectus, id terry richardson wolf pickled master cleanse eiusmod odd
-          future. Lomo banh mi proident odd future do marfa. Incididunt ea qui
-          cliche twee bushwick, ex seitan helvetica craft beer pinterest irure.
-          Food truck duis ethnic, gentrify consequat pickled sapiente selvage
-          lo-fi. Quis bicycle rights cardigan put a bird on it direct trade
-          consequat, aute brunch commodo. Blog pop-up narwhal, sustainable
-          american apparel seitan gastropub keytar banh mi irure pour-over enim
-          godard tofu et.
+        %h1= activity.title
+        %p= activity.description
       .span4
         %h5 Difficulty Level
-        %span{ class: "difficulty #{difficulty_level}"}
-          Easy
+        %span{ class: "difficulty #{activity.difficulty.downcase}"}
+          = activity.difficulty.capitalize
         .horizontal-divider
-        %span 72 Cooked This
+          %span== #{activity.cooked_this} Cooked This
       .span12
         .horizontal-divider
     .row
@@ -38,17 +27,15 @@
               %tr
                 %td= ingredient.title
                 %td.quantity= ingredient.quantity
-                %td kg
+                %td= ingredient.unit
                 %td
       .span4
         .row
           .span4
             %h5 Yield
-            %p 800 g(~4 portions)
+            %p= activity.yield
             %h5 Timing
-            %p
-              74 hours overall including 34 mins preperation and 35 mins to
-              reheat and finish
+            %p= activity.timing
         .row
           .span4
             %h5 Equipment
