--- a/app/assets/stylesheets/application/_header.sass
+++ b/app/assets/stylesheets/application/_header.sass
@@ -2,7 +2,7 @@
   margin-bottom: 0
 
 .navbar .brand
-  padding-bottom: 8px
+  padding: 15px 0 0 0
 
 .brand-byline
   clear: left
@@ -22,9 +22,6 @@
   +box-shadow(none)
   border: 0
 
-.navbar .nav
-  margin-top: 20px
-
 .navbar .nav > li > a
   color: #333
   padding: 10px 10px 11px
@@ -42,7 +39,7 @@
   color: #111
 
 .navbar .addthis-container
-  margin-top: 40px
+  margin-top: 30px
 
 .addthis_toolbox
   a
